--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,6 @@
 /administrator/components/com_search/*
 /administrator/components/com_templates/*
 /administrator/components/com_users/*
-/administrator/components/com_weblinks/*
-/administrator/components/index.html
 /administrator/help/*
 /administrator/includes/*
 /administrator/language/en-GB/en-GB.com_ajax.ini
@@ -41,7 +39,6 @@
 /administrator/language/en-GB/en-GB.com_joomlaupdate.sys.ini
 /administrator/language/en-GB/en-GB.com_postinstall.ini
 /administrator/language/en-GB/en-GB.com_postinstall.sys.ini
-/administrator/language/en-GB/en-GB.com_sitemapjen.sys.ini
 /administrator/language/en-GB/en-GB.com_tags.ini
 /administrator/language/en-GB/en-GB.com_tags.sys.ini
 /administrator/language/en-GB/en-GB.mod_stats_admin.ini
@@ -52,6 +49,7 @@
 /administrator/language/en-GB/en-GB.plg_content_contact.sys.ini
 /administrator/language/en-GB/en-GB.plg_content_finder.ini
 /administrator/language/en-GB/en-GB.plg_content_finder.sys.ini
+/administrator/language/en-GB/en-GB.plg_editors-xtd_module*
 /administrator/language/en-GB/en-GB.plg_finder_categories.ini
 /administrator/language/en-GB/en-GB.plg_finder_categories.sys.ini
 /administrator/language/en-GB/en-GB.plg_finder_contacts.ini
@@ -64,6 +62,10 @@
 /administrator/language/en-GB/en-GB.plg_finder_tags.sys.ini
 /administrator/language/en-GB/en-GB.plg_finder_weblinks.ini
 /administrator/language/en-GB/en-GB.plg_finder_weblinks.sys.ini
+/administrator/language/en-GB/en-GB.plg_installer_folderinstaller*
+/administrator/language/en-GB/en-GB.plg_installer_packageinstaller*
+/administrator/language/en-GB/en-GB.plg_installer_packageinstaller
+/administrator/language/en-GB/en-GB.plg_installer_urlinstaller*
 /administrator/language/en-GB/en-GB.plg_installer_webinstaller.ini
 /administrator/language/en-GB/en-GB.plg_installer_webinstaller.sys.ini
 /administrator/language/en-GB/en-GB.plg_quickicon_joomlaupdate.ini
@@ -72,6 +74,8 @@
 /administrator/language/en-GB/en-GB.plg_search_tags.sys.ini
 /administrator/language/en-GB/en-GB.plg_system_languagecode.ini
 /administrator/language/en-GB/en-GB.plg_system_languagecode.sys.ini
+/administrator/language/en-GB/en-GB.plg_system_stats*
+/administrator/language/en-GB/en-GB.plg_system_updatenotification*
 /administrator/language/en-GB/en-GB.plg_twofactorauth_totp.ini
 /administrator/language/en-GB/en-GB.plg_twofactorauth_totp.sys.ini
 /administrator/language/en-GB/en-GB.plg_twofactorauth_yubikey.ini
@@ -243,14 +247,11 @@
 /administrator/language/en-GB/en-GB.plg_user_joomla.sys.ini
 /administrator/language/en-GB/en-GB.plg_user_profile.ini
 /administrator/language/en-GB/en-GB.plg_user_profile.sys.ini
-/administrator/language/en-GB/en-GB.tpl_bluestork.ini
-/administrator/language/en-GB/en-GB.tpl_bluestork.sys.ini
 /administrator/language/en-GB/en-GB.tpl_hathor.ini
 /administrator/language/en-GB/en-GB.tpl_hathor.sys.ini
 /administrator/language/en-GB/en-GB.xml
-/administrator/language/en-GB/index.html
 /administrator/language/overrides/*
-/administrator/language/index.html
+/administrator/logs/index.html
 /administrator/manifests/*
 /administrator/modules/mod_custom/*
 /administrator/modules/mod_feed/*
@@ -269,12 +270,9 @@
 /administrator/modules/mod_unread/*
 /administrator/modules/mod_version/*
 /administrator/modules/mod_stats_admin/*
-/administrator/modules/index.html
-/administrator/templates/bluestork/*
 /administrator/templates/isis/*
 /administrator/templates/hathor/*
 /administrator/templates/system/*
-/administrator/templates/index.html
 /administrator/index.php
 /cache/*
 /bin/*
@@ -289,10 +287,10 @@
 /components/com_finder/*
 /components/com_mailto/*
 /components/com_media/*
+/components/com_modules/*
 /components/com_newsfeeds/*
 /components/com_search/*
 /components/com_users/*
-/components/com_weblinks/*
 /components/com_wrapper/*
 /components/index.html
 /images/banners/*
@@ -393,7 +391,6 @@
 /language/en-GB/en-GB.tpl_beez5.ini
 /language/en-GB/en-GB.tpl_beez5.sys.ini
 /language/en-GB/en-GB.xml
-/language/en-GB/index.html
 /language/en-GB/install.xml
 /language/overrides/*
 /language/index.html
@@ -407,6 +404,7 @@
 /libraries/idna_convert/*
 /libraries/joomla/*
 /libraries/legacy/*
+/libraries/php-encryption/*
 /libraries/phpass/*
 /libraries/phpmailer/*
 /libraries/phputf8/*
@@ -417,8 +415,6 @@
 /libraries/index.html
 /libraries/import.php
 /libraries/loader.php
-/libraries/platform.php
-/logs/*
 /media/cms/*
 /media/com_contenthistory/*
 /media/com_finder/*
@@ -431,9 +427,11 @@
 /media/media/*
 /media/mod_languages/*
 /media/overrider/*
+/media/plg_captcha_recaptcha/*
 /media/plg_quickicon_extensionupdate/*
 /media/plg_quickicon_joomlaupdate/*
 /media/plg_system_highlight/*
+/media/plg_system_stats/*
 /media/system/*
 /media/index.html
 /modules/mod_articles_archive/*
@@ -459,7 +457,6 @@
 /modules/mod_tags_popular/*
 /modules/mod_tags_similar/*
 /modules/mod_users_latest/*
-/modules/mod_weblinks/*
 /modules/mod_whosonline/*
 /modules/mod_wrapper/*
 /modules/index.html
@@ -468,9 +465,7 @@
 /plugins/authentication/joomla/*
 /plugins/authentication/ldap/*
 /plugins/authentication/cookie/*
-/plugins/authentication/index.html
 /plugins/captcha/recaptcha/*
-/plugins/captcha/index.html
 /plugins/content/emailcloak/*
 /plugins/content/example/*
 /plugins/content/finder/*
@@ -481,26 +476,21 @@
 /plugins/content/pagenavigation/*
 /plugins/content/vote/*
 /plugins/content/contact/*
-/plugins/content/index.html
 /plugins/editors/codemirror/*
 /plugins/editors/none/*
 /plugins/editors/tinymce/*
-/plugins/editors/index.html
+/plugins/editors-xtd/module/*
 /plugins/editors-xtd/article/*
 /plugins/editors-xtd/image/*
 /plugins/editors-xtd/pagebreak/*
 /plugins/editors-xtd/readmore/*
-/plugins/editors-xtd/index.html
 /plugins/extension/example/*
 /plugins/extension/joomla/*
-/plugins/extension/index.html
-/plugins/finder/index.html
 /plugins/finder/categories/*
 /plugins/finder/contacts/*
 /plugins/finder/content/*
 /plugins/finder/newsfeeds/*
 /plugins/finder/tags/*
-/plugins/finder/weblinks/*
 /plugins/installer/*
 /plugins/quickicon/extensionupdate/*
 /plugins/quickicon/joomlaupdate/*
@@ -523,6 +513,8 @@
 /plugins/system/redirect/*
 /plugins/system/remember/*
 /plugins/system/sef/*
+/plugins/system/stats/*
+/plugins/system/updatenotification/*
 /plugins/system/index.html
 /plugins/twofactorauth/*
 /plugins/user/contactcreator/*
@@ -531,16 +523,183 @@
 /plugins/user/profile/*
 /plugins/user/index.html
 /plugins/index.html
-/templates/atomic/*
 /templates/beez3/*
-/templates/beez_20/*
-/templates/beez5/*
 /templates/protostar/*
 /templates/system/*
 /templates/index.html
 /tmp/*
+/logs/*
 /configuration.php
 /index.php
 /joomla.xml
 /*.txt
 /robots.txt.dist
+index.html
+install.xml
+
+administrator/language/ru-RU/ru-RU.ini
+administrator/language/ru-RU/ru-RU.xml
+administrator/language/ru-RU/ru-RU.com_admin.*
+administrator/language/ru-RU/ru-RU.com_ajax.*
+administrator/language/ru-RU/ru-RU.com_banners.*
+administrator/language/ru-RU/ru-RU.com_cache.*
+administrator/language/ru-RU/ru-RU.com_categories.*
+administrator/language/ru-RU/ru-RU.com_checkin.*
+administrator/language/ru-RU/ru-RU.com_config.*
+administrator/language/ru-RU/ru-RU.com_contact.*
+administrator/language/ru-RU/ru-RU.com_content.*
+administrator/language/ru-RU/ru-RU.com_contenthistory.*
+administrator/language/ru-RU/ru-RU.com_cpanel.*
+administrator/language/ru-RU/ru-RU.com_finder.*
+administrator/language/ru-RU/ru-RU.com_installer.*
+administrator/language/ru-RU/ru-RU.com_joomlaupdate.*
+administrator/language/ru-RU/ru-RU.com_languages.*
+administrator/language/ru-RU/ru-RU.com_login.*
+administrator/language/ru-RU/ru-RU.com_media.*
+administrator/language/ru-RU/ru-RU.com_menus.*
+administrator/language/ru-RU/ru-RU.com_messages.*
+administrator/language/ru-RU/ru-RU.com_modules.*
+administrator/language/ru-RU/ru-RU.com_newsfeeds.*
+administrator/language/ru-RU/ru-RU.com_plugins.*
+administrator/language/ru-RU/ru-RU.com_postinstall.*
+administrator/language/ru-RU/ru-RU.com_redirect.*
+administrator/language/ru-RU/ru-RU.com_search.*
+administrator/language/ru-RU/ru-RU.com_tags.*
+administrator/language/ru-RU/ru-RU.com_templates.*
+administrator/language/ru-RU/ru-RU.com_users.*
+administrator/language/ru-RU/ru-RU.com_weblinks.*
+administrator/language/ru-RU/ru-RU.com_wrapper.*
+administrator/language/ru-RU/ru-RU.lib_joomla.*
+administrator/language/ru-RU/ru-RU.localise.php
+administrator/language/ru-RU/ru-RU.mod_custom.*
+administrator/language/ru-RU/ru-RU.mod_feed.*
+administrator/language/ru-RU/ru-RU.mod_latest.*
+administrator/language/ru-RU/ru-RU.mod_logged.*
+administrator/language/ru-RU/ru-RU.mod_login.*
+administrator/language/ru-RU/ru-RU.mod_menu.*
+administrator/language/ru-RU/ru-RU.mod_multilangstatus.*
+administrator/language/ru-RU/ru-RU.mod_popular.*
+administrator/language/ru-RU/ru-RU.mod_quickicon.*
+administrator/language/ru-RU/ru-RU.mod_stats_admin.*
+administrator/language/ru-RU/ru-RU.mod_status.*
+administrator/language/ru-RU/ru-RU.mod_submenu.*
+administrator/language/ru-RU/ru-RU.mod_title.*
+administrator/language/ru-RU/ru-RU.mod_toolbar.*
+administrator/language/ru-RU/ru-RU.mod_version.*
+administrator/language/ru-RU/ru-RU.plg_authentication_cookie.*
+administrator/language/ru-RU/ru-RU.plg_authentication_gmail.*
+administrator/language/ru-RU/ru-RU.plg_authentication_joomla.*
+administrator/language/ru-RU/ru-RU.plg_authentication_ldap.*
+administrator/language/ru-RU/ru-RU.plg_captcha_recaptcha.*
+administrator/language/ru-RU/ru-RU.plg_content_contact.*
+administrator/language/ru-RU/ru-RU.plg_content_emailcloak.*
+administrator/language/ru-RU/ru-RU.plg_content_finder.*
+administrator/language/ru-RU/ru-RU.plg_content_joomla.*
+administrator/language/ru-RU/ru-RU.plg_content_loadmodule.*
+administrator/language/ru-RU/ru-RU.plg_content_pagebreak.*
+administrator/language/ru-RU/ru-RU.plg_content_pagenavigation.*
+administrator/language/ru-RU/ru-RU.plg_content_vote.*
+administrator/language/ru-RU/ru-RU.plg_editors-xtd_article.*
+administrator/language/ru-RU/ru-RU.plg_editors-xtd_image.*
+administrator/language/ru-RU/ru-RU.plg_editors-xtd_module.*
+administrator/language/ru-RU/ru-RU.plg_editors-xtd_pagebreak.*
+administrator/language/ru-RU/ru-RU.plg_editors-xtd_readmore.*
+administrator/language/ru-RU/ru-RU.plg_editors_codemirror.*
+administrator/language/ru-RU/ru-RU.plg_editors_none.*
+administrator/language/ru-RU/ru-RU.plg_editors_tinymce.*
+administrator/language/ru-RU/ru-RU.plg_extension_joomla.*
+administrator/language/ru-RU/ru-RU.plg_finder_categories.*
+administrator/language/ru-RU/ru-RU.plg_finder_contacts.*
+administrator/language/ru-RU/ru-RU.plg_finder_content.*
+administrator/language/ru-RU/ru-RU.plg_finder_newsfeeds.*
+administrator/language/ru-RU/ru-RU.plg_finder_tags.*
+administrator/language/ru-RU/ru-RU.plg_finder_weblinks.*
+administrator/language/ru-RU/ru-RU.plg_installer_folderinstaller.*
+administrator/language/ru-RU/ru-RU.plg_installer_packageinstaller.*
+administrator/language/ru-RU/ru-RU.plg_installer_urlinstaller.*
+administrator/language/ru-RU/ru-RU.plg_installer_webinstaller.*
+administrator/language/ru-RU/ru-RU.plg_quickicon_extensionupdate.*
+administrator/language/ru-RU/ru-RU.plg_quickicon_joomlaupdate.*
+administrator/language/ru-RU/ru-RU.plg_search_categories.*
+administrator/language/ru-RU/ru-RU.plg_search_contacts.*
+administrator/language/ru-RU/ru-RU.plg_search_content.*
+administrator/language/ru-RU/ru-RU.plg_search_newsfeeds.*
+administrator/language/ru-RU/ru-RU.plg_search_tags.*
+administrator/language/ru-RU/ru-RU.plg_search_weblinks.*
+administrator/language/ru-RU/ru-RU.plg_system_cache.*
+administrator/language/ru-RU/ru-RU.plg_system_debug.*
+administrator/language/ru-RU/ru-RU.plg_system_highlight.*
+administrator/language/ru-RU/ru-RU.plg_system_languagecode.*
+administrator/language/ru-RU/ru-RU.plg_system_languagefilter.*
+administrator/language/ru-RU/ru-RU.plg_system_log.*
+administrator/language/ru-RU/ru-RU.plg_system_logout.*
+administrator/language/ru-RU/ru-RU.plg_system_p3p.*
+administrator/language/ru-RU/ru-RU.plg_system_redirect.*
+administrator/language/ru-RU/ru-RU.plg_system_remember.*
+administrator/language/ru-RU/ru-RU.plg_system_sef.*
+administrator/language/ru-RU/ru-RU.plg_system_stats.*
+administrator/language/ru-RU/ru-RU.plg_system_updatenotification.*
+administrator/language/ru-RU/ru-RU.plg_twofactorauth_totp.*
+administrator/language/ru-RU/ru-RU.plg_twofactorauth_yubikey.*
+administrator/language/ru-RU/ru-RU.plg_user_contactcreator.*
+administrator/language/ru-RU/ru-RU.plg_user_joomla.*
+administrator/language/ru-RU/ru-RU.plg_user_profile.*
+administrator/language/ru-RU/ru-RU.tpl_hathor.*
+administrator/language/ru-RU/ru-RU.tpl_isis.*
+administrator/language/ru-RU/ru-RU.com_mailto.*
+
+language/ru-RU/index.html
+language/ru-RU/install.xml
+language/ru-RU/ru-RU.ini
+language/ru-RU/ru-RU.xml
+language/ru-RU/ru-RU.com_ajax.*
+language/ru-RU/ru-RU.com_config.*
+language/ru-RU/ru-RU.com_contact.*
+language/ru-RU/ru-RU.com_content.*
+language/ru-RU/ru-RU.com_finder.*
+language/ru-RU/ru-RU.com_mailto.*
+language/ru-RU/ru-RU.com_media.*
+language/ru-RU/ru-RU.com_messages.*
+language/ru-RU/ru-RU.com_newsfeeds.*
+language/ru-RU/ru-RU.com_search.*
+language/ru-RU/ru-RU.com_tags.*
+language/ru-RU/ru-RU.com_users.*
+language/ru-RU/ru-RU.com_weblinks.*
+language/ru-RU/ru-RU.com_wrapper.*
+language/ru-RU/ru-RU.finder_cli.*
+language/ru-RU/ru-RU.lib_fof.*
+language/ru-RU/ru-RU.lib_joomla.*
+language/ru-RU/ru-RU.localise.php
+language/ru-RU/ru-RU.mod_articles_archive.*
+language/ru-RU/ru-RU.mod_articles_categories.*
+language/ru-RU/ru-RU.mod_articles_category.*
+language/ru-RU/ru-RU.mod_articles_latest.*
+language/ru-RU/ru-RU.mod_articles_news.*
+language/ru-RU/ru-RU.mod_articles_popular.*
+language/ru-RU/ru-RU.mod_banners.*
+language/ru-RU/ru-RU.mod_breadcrumbs.*
+language/ru-RU/ru-RU.mod_custom.*
+language/ru-RU/ru-RU.mod_feed.*
+language/ru-RU/ru-RU.mod_finder.*
+language/ru-RU/ru-RU.mod_footer.*
+language/ru-RU/ru-RU.mod_languages.*
+language/ru-RU/ru-RU.mod_login.*
+language/ru-RU/ru-RU.mod_menu.*
+language/ru-RU/ru-RU.mod_random_image.*
+language/ru-RU/ru-RU.mod_related_items.*
+language/ru-RU/ru-RU.mod_search.*
+language/ru-RU/ru-RU.mod_stats.*
+language/ru-RU/ru-RU.mod_syndicate.*
+language/ru-RU/ru-RU.mod_tags_popular.*
+language/ru-RU/ru-RU.mod_tags_similar.*
+language/ru-RU/ru-RU.mod_users_latest.*
+language/ru-RU/ru-RU.mod_weblinks.*
+language/ru-RU/ru-RU.mod_whosonline.*
+language/ru-RU/ru-RU.mod_wrapper.*
+language/ru-RU/ru-RU.tpl_beez3.*
+language/ru-RU/ru-RU.tpl_protostar.*
+language/ru-RU/ru-RU.files_joomla.*
+language/ru-RU/ru-RU.lib_phpass.*
+language/ru-RU/ru-RU.lib_idna_convert.*
+language/ru-RU/ru-RU.lib_phputf8.*
+language/ru-RU/ru-RU.lib_simplepie.*
